# ClaudeRunner

./: .gitignore  README.md  claude-runner.sh
config/: guardrails.conf  notify.sh  projects.conf  runner.conf
docs/: field-observations.md
docs/slides/: index.html
docs/superpowers/plans/: 2026-04-17-claude-runner.md
docs/superpowers/specs/: 2026-04-17-claude-runner-design.md
projects/bookmark-archiver/: bookmark-archiver.py  bookmark_archiver.py  config.json  test_archiver.py
projects/cron-watchdog/: config.json  test_watchdog.py  watchdog.py
projects/env-audit-cli/: config.json  env-audit.py  test_audit.py
projects/report-card-generator/: report-card-generator.py  report.html  sample.json  test_report_card.py
projects/skills-hub-cli/: README.md  config.json  pyproject.toml
projects/skills-hub-cli/skills_hub/: __init__.py  cli.py  formatter.py  parser.py
projects/skills-hub-cli/tests/: test_skills_hub.py
projects/ta-batch-runner/: .gitignore  config.json  runner.py  test_batch.py
projects/voice-transcript-processor/: config.json  test_transcript.py  transcript_processor.py
projects/wiki-scout/: config.json  scout.py  test_scout.py
prompts/: execute.md  report.md  review.md
tests/: test_claude_runner.py
